<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.workspike.trakit.AddDeviceActivity"
    android:theme="@style/AppTheme.NoActionBar">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/nightroad_adddevie"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_new_device"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_devicesaveErrorMsg"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:ems="10"
        android:id="@+id/et_device_sn"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/serial_number2"
        android:autoText="false"
        android:layout_below="@+id/et_device_imei"
        android:layout_alignLeft="@+id/et_passowrd"
        android:layout_alignStart="@+id/et_passowrd"
        android:maxLines="1"
        tools:ignore="Deprecated" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/et_device_imei"
        android:textColor="@android:color/white"

        android:entries="@array/country_arrays"
        android:prompt="@string/country_prompt"
        android:textColorHighlight="@android:color/white"
        android:hint="@string/imei_number"
        android:textColorHint="@android:color/white"
        android:editable="true"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/tv_devicesaveErrorMsg"
        android:layout_alignLeft="@+id/et_device_sn"
        android:layout_alignStart="@+id/et_device_sn"
        tools:ignore="Deprecated" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_passowrd"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/device_password"
        android:autoText="false"
        android:layout_below="@+id/et_device_sn"
        android:layout_alignLeft="@+id/et_device_name"
        android:layout_alignStart="@+id/et_device_name"
        tools:ignore="Deprecated" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|phone"
        android:ems="10"
        android:id="@+id/et_sim_number"
        android:hint="@string/sim_number"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:layout_below="@+id/et_device_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_device_colour"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/device_colour"
        android:layout_below="@+id/et_sim_number"
        android:layout_alignLeft="@+id/et_sim_number"
        android:layout_alignStart="@+id/et_sim_number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:ems="10"
        android:id="@+id/et_device_name"
        android:hint="@string/device_name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/et_passowrd"
        android:layout_alignRight="@+id/et_sim_number"
        android:layout_alignEnd="@+id/et_sim_number" />

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reset"
        android:layout_below="@+id/et_device_colour"
        android:layout_toLeftOf="@+id/btn_add_device"
        android:layout_toStartOf="@+id/btn_add_device"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_device"
        android:textColorLink="@android:color/white"
        android:padding="10dp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_alignBaseline="@+id/btn_reset"
        android:layout_alignBottom="@+id/btn_reset"
        android:layout_toRightOf="@+id/tv_devicesaveErrorMsg"
        android:layout_toEndOf="@+id/tv_devicesaveErrorMsg" />
</RelativeLayout>
